--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,27 +1,84 @@
 header {
     background-color: #4f4f4f;
     display: flex;
+    justify-content: end;
+    padding: 20PX 20PX;
+    align-items: center;
+
+
+}
+
+.conteudo-nav{
+    display: flex;
+    width: 100%;
     justify-content: space-between;
-    padding: 10px 20px;
     align-items: center;
 }
 
-.icons,
-.icons_fim {
+
+
+.container_cabecalho {
     display: flex;
-    gap: 10px;
-    color: #f5f5f5;
+    justify-content: space-between;
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+    height: 100%;
+    align-items: center;
+}    
+
+
+.menu_barras{
+    width: 50px;
+    color: #000000;
+    /* display: none; */
+    z-index: 2;
 }
 
-h1 {
-    font-weight: bold;
-    font-size: 50px;
-    justify-content: center;
-    color: #f5f5f5;
-}
+.box_busca{
+    position: relative;
+    width: 60%;
+    max-width: 500px;
+    margin: 0 10px;
+}    
 
-svg {
-    width: 35px;
-    height: 35px;
-}
+.icone_lupa{
+    height: 24px;
+    position: absolute;
+    left: 9px;
+    top: 9px;
+    fill: #b0b0b0;
+   
+}    
 
+.campo_busca{
+    width: 100%;
+    height: 42px;
+    border-radius: 10px;
+    border: solid 1px #cccccc;
+    padding-left: 2.5rem;
+    font-size: 1rem;
+    
+
+}    
+
+
+H1 {
+    height: 40px;
+    color: #FFFFFF;    
+}    
+
+
+
+@media screen and (max-width: 760px) {
+    .me-auto {
+        align-items: end;
+    }
+    .header {
+        margin: irem 0 1rem 0;
+    }
+    .icone_menu{
+        margin-bottom: 50px;
+    }
+}
+    
